crates/data_components/tests/snapshots/hadoop_catalog_test__tests__file_my_table_2.snap
---
source: crates/catalog/hadoop/tests/hadoop_catalog_test.rs
expression: snapshot_content
---
+----+------+
| id | name |
+----+------+
| 3  | foo  |
| 4  | bar  |
+----+------+
