crates/data_components/tests/snapshots/hadoop_catalog_test__tests__file_my_table_3.snap
---
source: crates/catalog/hadoop/tests/hadoop_catalog_test.rs
expression: snapshot_content
---
+----+------+
| id | name |
+----+------+
| 5  | foo  |
| 6  | bar  |
+----+------+
