crates/data_components/tests/snapshots/hadoop_catalog_test__tests__s3a_my_table_1.snap
---
source: crates/catalog/hadoop/tests/hadoop_catalog_test.rs
expression: snapshot_content
---
+----+------+
| id | name |
+----+------+
| 1  | foo  |
| 2  | bar  |
+----+------+
